Fix alignment of Social icons and menu icon on mobile devices

--- a/css/base.css
+++ b/css/base.css
@@ -1613,6 +1613,10 @@ a {
   line-height: 1em;
   letter-spacing: 0; }
 
+@media screen and (max-width: 37.5em) {
+  #page > .layout-wrapper {
+    height: 28px;
+    max-height: 28px; } }
 /*-------------------------------------------------------------- 
 13.1 Social Networks
 --------------------------------------------------------------*/
@@ -1637,6 +1641,9 @@ a {
     .social {
       padding-left: 0; } }
 
+@media screen and (max-width: 37.5em) {
+  .social {
+    margin: 0; } }
 /*-------------------------------------------------------------- 
 13.2 Account Links
 --------------------------------------------------------------*/
