--- a/css/main.css
+++ b/css/main.css
@@ -1740,6 +1740,10 @@ a {
   line-height: 1em;
   letter-spacing: 0; }
 
+@media screen and (max-width: 37.5em) {
+  #page > .layout-wrapper {
+    height: 28px;
+    max-height: 28px; } }
 /*-------------------------------------------------------------- 
 13.1 Social Networks
 --------------------------------------------------------------*/
@@ -1766,6 +1770,9 @@ a {
     .social {
       padding-left: 0; } }
 
+@media screen and (max-width: 37.5em) {
+  .social {
+    margin: 0; } }
 /*-------------------------------------------------------------- 
 13.2 Account Links
 --------------------------------------------------------------*/
