--- a/sass/site/masthead/_social-networks.scss
+++ b/sass/site/masthead/_social-networks.scss
@@ -1,31 +1,37 @@
 .social {   
-    float: left;
-    padding-left: 0;
-    @include margin( $size__margin, 0 );    
-    text-align: left;
+	float: left;
+	padding-left: 0;
+	@include margin( $size__margin, 0 );    
+	text-align: left;
 
-    li {
-        display: inline-block;
-        @include margin( 0, $size__margin, 0, 0 );          
-    }
+	li {
+		display: inline-block;
+		@include margin( 0, $size__margin, 0, 0 );          
+	}
 
-    a {
-        @include color( $color__text-overlay );
-        &:hover {
-            text-decoration: none;
-        }
-    }   
+	a {
+		@include color( $color__text-overlay );
+		&:hover {
+			text-decoration: none;
+		}
+	}   
 
-    i {
-        @include font-size( 18 );
-        @include line-height( 32 );
-    }
+	i {
+		@include font-size( 18 );
+		@include line-height( 32 );
+	}
 
-    // @include bp( 600 ) {
-    //      // float: left;
-    // }
+	// @include bp( 600 ) {
+	//      // float: left;
+	// }
 
-    @include bp( 1400 ) {
-        padding-left: 0;
-    }
+	@include bp( 1400 ) {
+		padding-left: 0;
+	}
+}
+
+@media screen and (max-width:37.5em) {
+	.social {
+		margin: 0;
+	}
 }
